# tflite-support

./: pyproject.toml
tensorflow_lite_support/metadata/tflite_support/: BUILD  metadata.py  metadata_displayer.py  metadata_schema_py_generated.py  metadata_writer_for_task.py  schema_py_generated.py
tensorflow_lite_support/metadata/tflite_support/metadata_writers/: BUILD  audio_classifier.py  bert_nl_classifier.py  image_classifier.py  image_segmenter.py  metadata_info.py  metadata_writer.py  nl_classifier.py  object_detector.py  writer_utils.py
tensorflow_lite_support/metadata/tflite_support/tests/: metadata_parser_test.py  metadata_test.py  metadata_writer_for_task_test.py
tensorflow_lite_support/metadata/tflite_support/tests/metadata_writers/: audio_classifier_test.py  bert_nl_classifier_test.py  image_classifier_test.py  image_segmenter_test.py  metadata_info_test.py  metadata_writer_test.py  nl_classifier_test.py  object_detector_test.py  writer_utils_test.py
