[tool.poetry]
name = "tflite-support"
version = "0.0.0.dev0"
description = ""
authors = ["Duvan Marrugo <duvan.andres@cross-compass.com>"]
readme = "README.md"
packages = [{ include = "tflite_support", from = "tensorflow_lite_support/metadata" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flatbuffers = ">=2.0,<3"

[tool.nix]
format = "poetry-core"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
